--- a/admin-service/src/main/resources/application.properties
+++ b/admin-service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=admin-service
 
 spring.datasource.driverClassName= com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/vendor-connect
-spring.datasource.username=root
-spring.datasource.password=root@123
+spring.datasource.url=jdbc:mysql://localhost:3306/schema-name
+spring.datasource.username=username
+spring.datasource.password=password
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql = true
@@ -13,7 +13,7 @@ spring.jpa.hibernate.ddl-auto = update
 
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.username=2c8ebfca78edde
-spring.mail.password=c6f861dd1bfb2c
+spring.mail.username=username
+spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
